<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">ETHONE</string>
    <string name="title_activity_main">ETHONE</string>
    <string name="package_name">dev.ethone.app</string>
    <string name="custom_url_scheme">dev.ethone.app</string>
    <string name="shortcut_new_note">Nouvelle note</string>
    <string name="shortcut_new_note_long">Créer une note rapide</string>
    <string name="shortcut_start_focus">Lancer Focus</string>
    <string name="shortcut_start_focus_long">Démarrer une session de concentration</string>
    <string name="shortcut_add_task">Ajouter tâche</string>
    <string name="shortcut_add_task_long">Ajouter une nouvelle tâche</string>
    <string name="shortcut_search">Recherche</string>
    <string name="shortcut_search_long">Recherche globale ⌘K</string>
    <string name="shortcut_brain">Brain</string>
    <string name="shortcut_brain_long">Créer un objectif Brain</string>
    <string name="channel_reminders">Rappels</string>
    <string name="channel_reminders_desc">Rappels de tâches et événements</string>
    <string name="channel_focus">Focus</string>
    <string name="channel_focus_desc">Sessions Focus et minuteur</string>
    <string name="channel_sync">Synchronisation</string>
    <string name="channel_sync_desc">Synchronisation système et nuage</string>
    <string name="tile_focus_label">ETHONE Focus</string>
    <string name="tile_focus_desc">Activer/désactiver la session de concentration</string>
    <string name="tile_presence_label">ETHONE Présence</string>
    <string name="tile_presence_desc">Changer le statut de présence</string>
    <string name="widget_desc">Widget ETHONE avec palette Material You</string>
    <string name="widget_compact_desc">Compteur de tâches ETHONE</string>
    <string name="widget_list_desc">Liste de tâches ETHONE</string>
    <string name="widget_dashboard_desc">Dashboard ETHONE et notes</string>
</resources>
